Improved repository encapsulation by returning a shallow copy from `findAll()`, added new methods with technical query naming (`findByQuantityLessThan`, `findByPriceLessThan`) in `ProductRepository`, and updated corresponding business-named methods in `ProductService`. Revised documentation to clarify repository vs service responsibilities and naming rules.